<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="10dp"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TableRow
                android:layout_marginTop="2dp"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/city"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/city_value"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="2dp"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/address"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/address_value"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="2dp"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/postal_code"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/postal_code"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/postal_code_value"/>
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/phones"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/phone_list"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="95dp"
                    android:scrollbars="none" />

            </TableRow>
        </TableLayout>

        <FrameLayout
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="bottom" />

    </LinearLayout>
</ScrollView>